# BindedEngine

./: .gitmodules  CMakeLists.txt  CMakePresets.json
python/: binding.pyi  main.py
src/: binding.cpp  callback.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  object.cpp  object.hpp  shape.cpp  shape.hpp  signal.cpp  signal.hpp
